[package]
name = "nexus-web"
version = "0.1.0"
edition = "2021"

[dependencies]
libnexus = { path = "../libnexus" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.12"
tower-cookies = "0.10"
rand = "0.8"
hex = "0.4"
pwhash = "0.3"
axum-extra = { version = "0.9", features = ["cookie"] }
